src/qt/libqgraphicssceneevent.bf

	
	public void LastPos()
	{
		CQt.QGraphicsSceneHoverEvent_LastPos(this.nativePtr);
	}
	
	public void SetLastPos(void* pos)
	{
		CQt.QGraphicsSceneHoverEvent_SetLastPos(this.nativePtr, pos);
	}
	
	public void LastScenePos()
	{
		CQt.QGraphicsSceneHoverEvent_LastScenePos(this.nativePtr);
	}
	
	public void SetLastScenePos(void* pos)
	{
		CQt.QGraphicsSceneHoverEvent_SetLastScenePos(this.nativePtr, pos);
	}
	
	public void LastScreenPos()
	{
		CQt.QGraphicsSceneHoverEvent_LastScreenPos(this.nativePtr);
	}
	
	public void SetLastScreenPos(void* pos)
	{
		CQt.QGraphicsSceneHoverEvent_SetLastScreenPos(this.nativePtr, pos);
	}
	
	public int64 Modifiers()
	{
		return CQt.QGraphicsSceneHoverEvent_Modifiers(this.nativePtr);
	}
	
	public void SetModifiers(int64 modifiers)
	{
		CQt.QGraphicsSceneHoverEvent_SetModifiers(this.nativePtr, modifiers);
	}
	
	public void* Widget()
	{
		return CQt.QGraphicsSceneEvent_Widget(this.nativePtr);
	}
	
	public void SetWidget(void* widget)
	{
		CQt.QGraphicsSceneEvent_SetWidget(this.nativePtr, widget);
	}
	
	public uint64 Timestamp()
	{
		return CQt.QGraphicsSceneEvent_Timestamp(this.nativePtr);
	}
	
	public void SetTimestamp(uint64 ts)
	{
		CQt.QGraphicsSceneEvent_SetTimestamp(this.nativePtr, ts);
	}
	
	public int64 Type()
	{
		return CQt.QEvent_Type(this.nativePtr);
	}
	
	public bool Spontaneous()
	{
		return CQt.QEvent_Spontaneous(this.nativePtr);
	}
	
	public virtual void SetAccepted(bool accepted)
	{
		CQt.QEvent_SetAccepted(this.nativePtr, accepted);
	}
	
	public bool IsAccepted()
	{
		return CQt.QEvent_IsAccepted(this.nativePtr);
	}
	
	public void Accept()
	{
		CQt.QEvent_Accept(this.nativePtr);
	}
	
	public void Ignore()
	{
		CQt.QEvent_Ignore(this.nativePtr);
	}
	
	public bool IsInputEvent()
	{
		return CQt.QEvent_IsInputEvent(this.nativePtr);
	}
	
	public bool IsPointerEvent()
	{
		return CQt.QEvent_IsPointerEvent(this.nativePtr);
	}
	
	public bool IsSinglePointEvent()
	{
		return CQt.QEvent_IsSinglePointEvent(this.nativePtr);
	}
	
	public static int32 RegisterEventType()
	{
		return CQt.QEvent_RegisterEventType();
	}
	
	public virtual void* Clone()
	{
		return CQt.QEvent_Clone(this.nativePtr);
	}
	
	public static int32 RegisterEventType1(int32 hint)
	{
		return CQt.QEvent_RegisterEventType1(hint);
	}
	
}
extension CQt
{
	[LinkName("QGraphicsSceneHoverEvent_new")]
	public static extern void* QGraphicsSceneHoverEvent_new();
	[LinkName("QGraphicsSceneHoverEvent_new2")]
	public static extern void* QGraphicsSceneHoverEvent_new2(int64 typeVal);
	[LinkName("QGraphicsSceneHoverEvent_Pos")]
	public static extern void QGraphicsSceneHoverEvent_Pos(void* c_this);
	[LinkName("QGraphicsSceneHoverEvent_SetPos")]
	public static extern void QGraphicsSceneHoverEvent_SetPos(void* c_this, void* pos);
	[LinkName("QGraphicsSceneHoverEvent_ScenePos")]
	public static extern void QGraphicsSceneHoverEvent_ScenePos(void* c_this);
	[LinkName("QGraphicsSceneHoverEvent_SetScenePos")]
	public static extern void QGraphicsSceneHoverEvent_SetScenePos(void* c_this, void* pos);
	[LinkName("QGraphicsSceneHoverEvent_ScreenPos")]
	public static extern void QGraphicsSceneHoverEvent_ScreenPos(void* c_this);
	[LinkName("QGraphicsSceneHoverEvent_SetScreenPos")]
	public static extern void QGraphicsSceneHoverEvent_SetScreenPos(void* c_this, void* pos);
	[LinkName("QGraphicsSceneHoverEvent_LastPos")]
	public static extern void QGraphicsSceneHoverEvent_LastPos(void* c_this);
	[LinkName("QGraphicsSceneHoverEvent_SetLastPos")]
	public static extern void QGraphicsSceneHoverEvent_SetLastPos(void* c_this, void* pos);
	[LinkName("QGraphicsSceneHoverEvent_LastScenePos")]
	public static extern void QGraphicsSceneHoverEvent_LastScenePos(void* c_this);
	[LinkName("QGraphicsSceneHoverEvent_SetLastScenePos")]
	public static extern void QGraphicsSceneHoverEvent_SetLastScenePos(void* c_this, void* pos);
	[LinkName("QGraphicsSceneHoverEvent_LastScreenPos")]
	public static extern void QGraphicsSceneHoverEvent_LastScreenPos(void* c_this);
	[LinkName("QGraphicsSceneHoverEvent_SetLastScreenPos")]
	public static extern void QGraphicsSceneHoverEvent_SetLastScreenPos(void* c_this, void* pos);
	[LinkName("QGraphicsSceneHoverEvent_Modifiers")]
	public static extern int64 QGraphicsSceneHoverEvent_Modifiers(void* c_this);
	[LinkName("QGraphicsSceneHoverEvent_SetModifiers")]
	public static extern void QGraphicsSceneHoverEvent_SetModifiers(void* c_this, int64 modifiers);
	/// Delete this object from C++ memory
	[LinkName("QGraphicsSceneHoverEvent_Delete")]
	public static extern void QGraphicsSceneHoverEvent_Delete(void* self);
}
public class QGraphicsSceneHelpEvent
{
	protected void* nativePtr;
	
	public this()
	{
		this.nativePtr = CQt.QGraphicsSceneHelpEvent_new();
	}
	
	public ~this()
	{
		CQt.QGraphicsSceneHelpEvent_Delete(this.nativePtr);
	}
	
	public void ScenePos()
	{
		CQt.QGraphicsSceneHelpEvent_ScenePos(this.nativePtr);
	}
	
	public void SetScenePos(void* pos)
	{
		CQt.QGraphicsSceneHelpEvent_SetScenePos(this.nativePtr, pos);
	}
	
	public void ScreenPos()
	{
		CQt.QGraphicsSceneHelpEvent_ScreenPos(this.nativePtr);
	}
	
	public void SetScreenPos(void* pos)
	{
		CQt.QGraphicsSceneHelpEvent_SetScreenPos(this.nativePtr, pos);
	}
	
	public void* Widget()
	{
		return CQt.QGraphicsSceneEvent_Widget(this.nativePtr);
	}
	
	public void SetWidget(void* widget)
	{
		CQt.QGraphicsSceneEvent_SetWidget(this.nativePtr, widget);
	}
	
	public uint64 Timestamp()
	{
		return CQt.QGraphicsSceneEvent_Timestamp(this.nativePtr);
	}
	
	public void SetTimestamp(uint64 ts)
	{
		CQt.QGraphicsSceneEvent_SetTimestamp(this.nativePtr, ts);
	}
	
	public int64 Type()
	{
		return CQt.QEvent_Type(this.nativePtr);
	}
	
	public bool Spontaneous()
	{
		return CQt.QEvent_Spontaneous(this.nativePtr);
	}
	
	public virtual void SetAccepted(bool accepted)
	{
		CQt.QEvent_SetAccepted(this.nativePtr, accepted);
	}
	
	public bool IsAccepted()
	{
		return CQt.QEvent_IsAccepted(this.nativePtr);
	}
	
	public void Accept()
	{
		CQt.QEvent_Accept(this.nativePtr);
	}
	
	public void Ignore()
	{
		CQt.QEvent_Ignore(this.nativePtr);
	}
	
	public bool IsInputEvent()
	{
		return CQt.QEvent_IsInputEvent(this.nativePtr);
	}
	
	public bool IsPointerEvent()
	{
		return CQt.QEvent_IsPointerEvent(this.nativePtr);
	}
	
	public bool IsSinglePointEvent()
	{
		return CQt.QEvent_IsSinglePointEvent(this.nativePtr);
	}
	
	public static int32 RegisterEventType()
	{
		return CQt.QEvent_RegisterEventType();
	}
	
	public virtual void* Clone()
	{
		return CQt.QEvent_Clone(this.nativePtr);
	}
	
	public static int32 RegisterEventType1(int32 hint)
	{
		return CQt.QEvent_RegisterEventType1(hint);
	}
	
}
extension CQt
{
	[LinkName("QGraphicsSceneHelpEvent_new")]
	public static extern void* QGraphicsSceneHelpEvent_new();
	[LinkName("QGraphicsSceneHelpEvent_new2")]
	public static extern void* QGraphicsSceneHelpEvent_new2(int64 typeVal);
	[LinkName("QGraphicsSceneHelpEvent_ScenePos")]
	public static extern void QGraphicsSceneHelpEvent_ScenePos(void* c_this);
	[LinkName("QGraphicsSceneHelpEvent_SetScenePos")]
	public static extern void QGraphicsSceneHelpEvent_SetScenePos(void* c_this, void* pos);
	[LinkName("QGraphicsSceneHelpEvent_ScreenPos")]
	public static extern void QGraphicsSceneHelpEvent_ScreenPos(void* c_this);
	[LinkName("QGraphicsSceneHelpEvent_SetScreenPos")]
	public static extern void QGraphicsSceneHelpEvent_SetScreenPos(void* c_this, void* pos);
	/// Delete this object from C++ memory
	[LinkName("QGraphicsSceneHelpEvent_Delete")]
	public static extern void QGraphicsSceneHelpEvent_Delete(void* self);
}
public class QGraphicsSceneDragDropEvent
{
	protected void* nativePtr;
	
	public this()
	{
		this.nativePtr = CQt.QGraphicsSceneDragDropEvent_new();
	}
	
	public ~this()
	{
		CQt.QGraphicsSceneDragDropEvent_Delete(this.nativePtr);
	}
	
	public void Pos()
	{
		CQt.QGraphicsSceneDragDropEvent_Pos(this.nativePtr);
	}
	
	public void SetPos(void* pos)
	{
		CQt.QGraphicsSceneDragDropEvent_SetPos(this.nativePtr, pos);
	}
	
	public void ScenePos()
	{
		CQt.QGraphicsSceneDragDropEvent_ScenePos(this.nativePtr);
	}
	
	public void SetScenePos(void* pos)
	{
		CQt.QGraphicsSceneDragDropEvent_SetScenePos(this.nativePtr, pos);
	}
	
	public void ScreenPos()
	{
		CQt.QGraphicsSceneDragDropEvent_ScreenPos(this.nativePtr);
	}
	
	public void SetScreenPos(void* pos)
	{
		CQt.QGraphicsSceneDragDropEvent_SetScreenPos(this.nativePtr, pos);
	}
	
	public int64 Buttons()
	{
		return CQt.QGraphicsSceneDragDropEvent_Buttons(this.nativePtr);
	}
	
	public void SetButtons(int64 buttons)
	{
		CQt.QGraphicsSceneDragDropEvent_SetButtons(this.nativePtr, buttons);
	}
	
	public int64 Modifiers()
	{
		return CQt.QGraphicsSceneDragDropEvent_Modifiers(this.nativePtr);
	}
	
	public void SetModifiers(int64 modifiers)
	{
		CQt.QGraphicsSceneDragDropEvent_SetModifiers(this.nativePtr, modifiers);
	}
	
	public int64 PossibleActions()
	{
		return CQt.QGraphicsSceneDragDropEvent_PossibleActions(this.nativePtr);
	}
	
	public void SetPossibleActions(int64 actions)
	{
		CQt.QGraphicsSceneDragDropEvent_SetPossibleActions(this.nativePtr, actions);
	}
	
	public int64 ProposedAction()
	{
		return CQt.QGraphicsSceneDragDropEvent_ProposedAction(this.nativePtr);
	}
	
	public void SetProposedAction(int64 action)
	{
		CQt.QGraphicsSceneDragDropEvent_SetProposedAction(this.nativePtr, action);
	}
	
	public void AcceptProposedAction()
	{
		CQt.QGraphicsSceneDragDropEvent_AcceptProposedAction(this.nativePtr);
	}
	
	public int64 DropAction()
	{
		return CQt.QGraphicsSceneDragDropEvent_DropAction(this.nativePtr);
	}
	
	public void SetDropAction(int64 action)
	{
		CQt.QGraphicsSceneDragDropEvent_SetDropAction(this.nativePtr, action);
	}
	
	public void* Source()
	{
		return CQt.QGraphicsSceneDragDropEvent_Source(this.nativePtr);
	}
	
	public void SetSource(void* source)
	{
		CQt.QGraphicsSceneDragDropEvent_SetSource(this.nativePtr, source);
	}
	
	public void* MimeData()
	{
		return CQt.QGraphicsSceneDragDropEvent_MimeData(this.nativePtr);
	}
	
	public void SetMimeData(void* data)
	{
		CQt.QGraphicsSceneDragDropEvent_SetMimeData(this.nativePtr, data);
	}
	
	public void* Widget()
	{
		return CQt.QGraphicsSceneEvent_Widget(this.nativePtr);
	}
	
	public void SetWidget(void* widget)
	{
		CQt.QGraphicsSceneEvent_SetWidget(this.nativePtr, widget);
	}
	
	public uint64 Timestamp()
	{
		return CQt.QGraphicsSceneEvent_Timestamp(this.nativePtr);
	}
	
	public void SetTimestamp(uint64 ts)
	{
		CQt.QGraphicsSceneEvent_SetTimestamp(this.nativePtr, ts);
	}
	
	public int64 Type()
	{
		return CQt.QEvent_Type(this.nativePtr);
	}
	
	public bool Spontaneous()
	{
		return CQt.QEvent_Spontaneous(this.nativePtr);
	}
	
	public virtual void SetAccepted(bool accepted)
	{
		CQt.QEvent_SetAccepted(this.nativePtr, accepted);
	}
	
	public bool IsAccepted()
	{
		return CQt.QEvent_IsAccepted(this.nativePtr);
	}
	
	public void Accept()
	{
		CQt.QEvent_Accept(this.nativePtr);
	}
	
	public void Ignore()
	{
		CQt.QEvent_Ignore(this.nativePtr);
	}
	
	public bool IsInputEvent()
	{
		return CQt.QEvent_IsInputEvent(this.nativePtr);
	}
	
	public bool IsPointerEvent()
	{
		return CQt.QEvent_IsPointerEvent(this.nativePtr);
	}
	
	public bool IsSinglePointEvent()
	{
		return CQt.QEvent_IsSinglePointEvent(this.nativePtr);
	}
	
	public static int32 RegisterEventType()
	{
		return CQt.QEvent_RegisterEventType();
	}
	
	public virtual void* Clone()
	{
		return CQt.QEvent_Clone(this.nativePtr);
	}
	
	public static int32 RegisterEventType1(int32 hint)
	{
		return CQt.QEvent_RegisterEventType1(hint);
	}
	
}
